--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <table id="data-table" class="container">
                     <thead>
                         <tr>
+                            <th>Índice</th>
                             <th>Família</th>
                             <th>Endereço</th>
                             <th>Responsável</th>
@@ -91,20 +92,6 @@
                 </form>
             </div>
         </div>
-        
-        <!-- <div class="delete-modal-action-overlay">
-            <div class="delete-action-modal">
-                <div class="text">
-                    <h3>Quer realmente deletar essa ação?</h3>
-                    <p>Não é possível recuperá-la de volta.</p>
-                </div>
-                <div class="button-group">
-                    <a href="#" class="close" onclick="Modal.hideModal('.delete-modal-action-overlay')">&leftarrow; Voltar</a>
-                    <a href="#" class="delete-action-button" onclick="Action.remove(${index})">Excluir</a>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <script src="scripts.js"></script>
 </body>
