alterando nome da coluna

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <table id="data-table" class="container">
                     <thead>
                         <tr>
-                            <th>Índice</th>
+                            <th>Index</th>
                             <th>Família</th>
                             <th>Endereço</th>
                             <th>Responsável</th>
