--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/modal.css">
-    <link rel="stylesheet" href="styles/delete-action-modal.css">
+    <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
@@ -29,9 +29,38 @@
                     <p></p>
                 </div>
             </section>
+            <!-- EM BREVE ================= Barra de pesquisa -->
+            <!-- <div class="search-action">
+                <form action="">
+                    <label for="search-action-input" class="sr-only">Procurar por uma Ação</label>
+                    <input type="text" placeholder="Procurar por uma ação" id="search-action-input">
+                    <button type="submit"><img src="./assets/search.svg" alt="Buscar"></button>
+                </form>
+            </div> -->
             <a href="#" id="new-action" onclick="Modal.displayModal('.modal-overlay')">+ Nova Ação</a>
             <section id="actions">
-                <table id="data-table" class="container">
+                <ul>
+                    <!-- <li class="action-item">
+                        <div class="content">
+                            <h3>Família Silva</h3>
+                            <div class="texts-container">
+                                <p class="address-p">Rua Getúlio Vargas, N 584, Bairro Centro </p>
+                                <p>02 Cestas doadas.</p>
+                            </div>
+                            <hr>
+                            <div class="tags-container">
+                                <div class="responsible-tag">Responsável por <strong>José.</strong></div>
+                                <div class="date-tag">Entregue dia <strong>24/05/2021.</strong></div>
+                            </div>
+                        </div>
+                        <div class="aside">
+                            <img src="./assets/delete.svg" alt="Excluir Doação.">
+                            <img src="./assets/edit.svg" alt="Editar Doação.">
+                        </div>
+                    </li> -->
+
+                </ul>
+                <!-- <table id="data-table" class="container">
                     <thead>
                         <tr>
                             <th>Index</th>
@@ -46,7 +75,7 @@
                     <tbody>
                         
                     </tbody>
-                </table>
+                </table> -->
             </section>
         </main>
         <footer>
@@ -86,13 +115,19 @@
                         <span class="error"></span>
                         <div class="button-group">
                             <a href="#" class="close" onclick="Modal.hideModal('.modal-overlay')">Fechar</a>
-                            <button type="submiit">Salvar</button>
+                            <button type="submiit" class="blue">Salvar</button>
                         </div>
                     </fieldset>
                 </form>
             </div>
         </div>
 
-    <script src="scripts.js"></script>
+    <script src="./scripts/Modal.js"></script>
+    <script src="./scripts/Storage.js"></script>
+    <script src="./scripts/Action.js"></script>
+    <script src="./scripts/Utils.js"></script>
+    <script src="./scripts/DOM.js"></script>
+    <script src="./scripts/Form.js"></script>
+    <script src="./scripts/scripts.js"></script>
 </body>
 </html>
