Criando alerta de sucesso ao adicionar doação

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <div id="app">
+    <span class="succes-add-action"><img src="assets/done.svg" alt="Sucesso">Doação Adicionada</span>
         <header>
             <h1>Coragem</h1>
         </header>
