Criada função de baixar em pdf

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </section>
             
             <a href="#" id="new-action" onclick="Modal.displayModal('#add-action.modal-overlay')">+ Nova Doação</a>
+            <a href="#" id="export-document" onclick="Export.run()" class="stroke-button">Exportar Documento</a>
             <section id="actions">
                 <ul>
                    <!-- <li class="action-item">
@@ -143,6 +144,7 @@
     <script src="./scripts/Storage.js"></script>
     <script src="./scripts/Action.js"></script>
     <script src="./scripts/Utils.js"></script>
+    <script src="./scripts/Export.js"></script>
     <script src="./scripts/DOM.js"></script>
     <script src="./scripts/Form.js"></script>
     <script src="./scripts/scripts.js"></script>
