Desabilitando a função de exportar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </section>
             
             <a href="#" id="new-action" onclick="Modal.displayModal('#add-action.modal-overlay')">+ Nova Doação</a>
-            <a href="#" id="export-document" onclick="Export.run()" class="stroke-button">Exportar Documento</a>
+            <!-- <a href="#" id="export-document" onclick="Export.run()" class="stroke-button">Exportar Documento</a> -->
             <section id="actions">
                 <ul>
                    <!-- <li class="action-item">
