Criando botão para copiar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             </section>
             
             <a href="#" id="new-action" onclick="Modal.displayModal('#add-action.modal-overlay')">+ Nova Doação</a>
-            <!-- <a href="#" id="export-document" onclick="Export.run()" class="stroke-button">Exportar Documento</a> -->
+            <!-- <input type="text" hidden id="export-actions" value="" /> -->
+            <button id="export" onclick="Export.run()" class="stroke-button">Exportar</button>
             <section id="actions">
                 <ul>
                    <!-- <li class="action-item">
